--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -120,9 +120,10 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body md">
+        <div class="chart-body lg">
+            <!-- Y轴单位标签 - 左上角 -->
             <div class="axis-unit y-left">缺陷数</div>
-            <div class="axis-unit y-left" style="top: 30px;">%</div>
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
@@ -133,6 +134,7 @@
                     <span class="legend-text">累计占比</span>
                 </div>
             </div>
+            <!-- X轴字段标签 - 右下角 -->
             <div class="x-field-label">缺陷类型</div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
             <div class="hover-hint">悬停查看标注</div>
@@ -291,7 +293,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [30, 35, 40, 35] : [40, 50, 50, 50];
+const basePadding = mobile ? [30, 35, 40, 35] : [40, 50, 50, 50]; // 双Y轴需要左右padding更大
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
