--- a/16-heatmap/index.html
+++ b/16-heatmap/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="chart-body md" style="position: relative;">
             <!-- 轴单位标签 -->
-            <div class="axis-unit y-left">日期</div>
+            <div class="axis-unit y-left">访问量</div>
             
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示颜色强度对应关系 -->
