--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -120,9 +120,11 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body lg">
+        <div class="chart-body xl" style="position: relative; padding-right: 160px;">
             <!-- Y轴单位标签 - 左上角 -->
             <div class="axis-unit y-left">缺陷数</div>
+            <!-- 右Y轴单位标签 - 右上角 -->
+            <div class="axis-unit y-right">%</div>
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend">
                 <div class="legend-item">
@@ -134,8 +136,8 @@
                     <span class="legend-text">累计占比</span>
                 </div>
             </div>
-            <!-- X轴字段标签 - 右下角 -->
-            <div class="x-field-label">缺陷类型</div>
+            <!-- X轴字段标签 - 右下角，稍微左移避免与X轴标签重叠 -->
+            <div class="x-field-label" style="right: 20px; bottom: 8px;">缺陷类型</div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
             <div class="hover-hint">悬停查看标注</div>
             <div class="annotation-layer">
@@ -293,7 +295,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [30, 35, 40, 35] : [40, 50, 50, 50]; // 双Y轴需要左右padding更大
+const basePadding = mobile ? [30, 35, 50, 35] : [40, 50, 60, 50]; // 双Y轴需要左右padding更大，底部增加空间避免X轴标签重叠
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
@@ -332,11 +334,11 @@ new DualAxes('chart-basic', {
     ],
     yAxis: {
         value: { 
-            title: { text: '缺陷数', style: { fontSize: fontSize } },
+            title: null, // 移除title，使用自定义axis-unit标签
             label: { style: { fontSize: fontSize } },
         },
         percent: {
-            title: { text: '累计占比', style: { fontSize: fontSize } },
+            title: null, // 移除title，使用自定义axis-unit标签
             label: { 
                 style: { fontSize: fontSize },
                 formatter: (v) => (v * 100).toFixed(0) + '%',
