调整桑基图位置：向右移动
调整内容：
1. 减少chart-body的padding-left：从20px调整为10px，让图表向右移动
2. 减少图表padding的左侧值：PC端从20调整为10，移动端从20调整为10
3. 保持右侧padding为160px，为图例留出空间
4. 图表现在更靠右，布局更平衡

--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -122,7 +122,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body xl" style="position: relative; padding-right: 160px; padding-left: 20px;">
+        <div class="chart-body xl" style="position: relative; padding-right: 160px; padding-left: 10px;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示主要节点类型的颜色对应关系 -->
             <div class="custom-legend">
@@ -310,7 +310,7 @@ new G2Plot.Sankey('chart-basic', {
     sourceField: 'source',
     targetField: 'target',
     weightField: 'value',
-    padding: mobile ? [20, 140, 20, 20] : [30, 160, 30, 20], // 减少左右padding，让图表更大并居中，右侧为图例留空间
+    padding: mobile ? [20, 140, 20, 10] : [30, 160, 30, 10], // 减少左侧padding，让图表向右移动，右侧为图例留空间
     nodeStyle: {
         opacity: 1,
         fillOpacity: 1,
