--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -122,10 +122,10 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body xl" style="position: relative; padding-right: 160px; padding-left: 10px;">
+        <div class="chart-body xl" style="position: relative; padding-right: 20px; padding-left: 10px;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示主要节点类型的颜色对应关系 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">流量来源</span>
