统一所有图表图例为横向排列
修改内容：
- 给所有19个图表的custom-legend添加horizontal类
- 包括：柱状图、堆叠柱状图、条形图、折线图、面积图、直方图、散点图、气泡图、雷达图、漏斗图、帕累托图、矩形树图、词云图、热力图、环图、瀑布图、双轴图、玫瑰图、旭日图
- 所有图例现在统一横向排列，更节省空间，布局更一致

--- a/02-stacked-column/index.html
+++ b/02-stacked-column/index.html
@@ -127,7 +127,7 @@
         <div class="chart-body md" style="position: relative;">
             <div class="axis-unit y-left">万元</div>
             <div class="x-field-label">按月份</div>
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <div class="legend-icon-square" style="background: #5B8FF9;"></div>
                     <span class="legend-text">线上</span>
