--- a/04-line/index.html
+++ b/04-line/index.html
@@ -124,7 +124,7 @@
         <div class="chart-body md">
             <div class="axis-unit y-left">万元</div>
             <div class="x-field-label">按月份</div>
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <div class="legend-icon-line-dot" style="background: #5B8FF9;"></div>
                     <span class="legend-text">销售额</span>
