--- a/07-histogram/index.html
+++ b/07-histogram/index.html
@@ -125,7 +125,7 @@
             <div class="axis-unit y-left">人数</div>
             
             <!-- 自定义图例 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5AD8A6;"></span>
                     <span class="legend-text">用户数</span>
