--- a/14-treemap/index.html
+++ b/14-treemap/index.html
@@ -123,7 +123,7 @@
         <div class="chart-body lg" style="position: relative;">
             <!-- 自定义图例 - 统一在右侧对齐，不遮挡图表 -->
             <!-- 颜色顺序：研发部(蓝)、市场部(绿)、销售部(橙)、行政部(红)、财务部(紫) -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">研发部</span>
