--- a/15-wordcloud/index.html
+++ b/15-wordcloud/index.html
@@ -132,7 +132,7 @@
         <div class="chart-body md" style="position: relative;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示主要颜色对应关系 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">高频词</span>
