--- a/16-heatmap/index.html
+++ b/16-heatmap/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -122,11 +123,11 @@
         </div>
         <div class="chart-body md" style="position: relative;">
             <!-- 轴单位标签 -->
-            <div class="axis-unit y-left">访问量</div>
+            <div class="axis-unit y-left">日期</div>
             
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示颜色强度对应关系 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #E8F3FF;"></span>
                     <span class="legend-text">低访问量</span>
