--- a/21-waterfall/index.html
+++ b/21-waterfall/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="chart-body lg" style="position: relative;">
             <div class="axis-unit y-left">万元</div>
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">增加</span>
