--- a/23-rose/index.html
+++ b/23-rose/index.html
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">智能手机</span>
