--- a/24-sunburst/index.html
+++ b/24-sunburst/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="chart-body lg" style="position: relative;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">研发中心</span>
