--- a/01-column/index.html
+++ b/01-column/index.html
@@ -144,7 +144,7 @@
         <div class="chart-body md">
             <div class="axis-unit y-left">万元</div>
             <div class="x-field-label">按地区</div>
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <div class="legend-icon-square" style="background: #5B8FF9;"></div>
                     <span class="legend-text">销售额</span>
