--- a/05-area/index.html
+++ b/05-area/index.html
@@ -129,7 +129,7 @@
             <div class="axis-unit y-left">访问量</div>
             
             <!-- 自定义图例 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5AD8A6;"></span>
                     <span class="legend-text">访问量</span>
