--- a/08-scatter/index.html
+++ b/08-scatter/index.html
@@ -125,7 +125,7 @@
             <div class="axis-unit y-left">销售额(万元)</div>
             
             <!-- 自定义图例 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">线上</span>
