--- a/10-radar/index.html
+++ b/10-radar/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="chart-body md" style="position: relative;">
             <!-- 自定义图例 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">张三</span>
