--- a/11-funnel/index.html
+++ b/11-funnel/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="chart-body md">
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">访问</span>
