--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="chart-body md" style="position: relative; overflow: hidden;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">线上商城</span>
