--- a/22-dual-axes/index.html
+++ b/22-dual-axes/index.html
@@ -135,7 +135,7 @@
             <!-- 右Y轴单位标签 - 右上角 -->
             <div class="axis-unit y-right">%</div>
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
-            <div class="custom-legend">
+            <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">销售额</span>
