--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -14,26 +14,27 @@
         .center-content {
             position: absolute;
             top: 50%;
-            left: 48%; /* 稍微左移，从50%改为48% */
+            left: 50%; /* 完全居中 */
             transform: translate(-50%, -50%); /* 保持居中对齐 */
             text-align: center;
             pointer-events: none;
-            max-width: 40%; /* 限制最大宽度，确保不超出环形图内径 */
+            max-width: 45%; /* 稍微增加最大宽度，给数字更多空间 */
             box-sizing: border-box;
-            padding: 0 6px; /* 添加内边距，防止文字贴边 */
+            padding: 0 8px; /* 增加内边距，防止文字贴边 */
         }
         .center-value {
-            font-size: 24px; /* 减小字体，避免与标签重叠 */
+            font-size: 26px; /* 稍微增大字体，让数字更突出 */
             font-weight: 700;
             color: #1D1D1F;
-            line-height: 1.2;
+            line-height: 1.3; /* 增加行高，让数字更舒适 */
             white-space: nowrap; /* 防止数字换行 */
+            letter-spacing: -0.5px; /* 稍微收紧字母间距，让数字更紧凑 */
         }
         .center-label {
-            font-size: 11px; /* 减小字体 */
+            font-size: 12px; /* 稍微增大字体，提高可读性 */
             color: #86868B;
-            margin-top: 3px;
-            line-height: 1.3;
+            margin-top: 4px; /* 增加上边距，让标签与数字有更好的间距 */
+            line-height: 1.4; /* 增加行高 */
             word-break: keep-all; /* 保持中文词不拆分 */
             white-space: normal; /* 允许标签文字换行 */
             max-width: 100%;
@@ -42,16 +43,18 @@
         /* 响应式优化 */
         @media (max-width: 768px) {
             .center-content {
-                left: 47%; /* 移动端也稍微左移 */
-                max-width: 32%; /* 移动端进一步缩小最大宽度，避免与标签重叠 */
-                padding: 0 4px;
+                left: 50%; /* 移动端也完全居中 */
+                max-width: 40%; /* 移动端稍微增加最大宽度 */
+                padding: 0 6px;
             }
             .center-value {
-                font-size: 18px; /* 移动端减小字体，避免与标签重叠 */
+                font-size: 20px; /* 移动端稍微增大字体 */
+                line-height: 1.3;
             }
             .center-label {
-                font-size: 9px; /* 移动端减小字体 */
-                margin-top: 2px;
+                font-size: 10px; /* 移动端稍微增大字体 */
+                margin-top: 3px;
+                line-height: 1.4;
             }
         }
     </style>
@@ -318,8 +321,8 @@ const mobile = ChartSpec.isMobile();
 const labelFontSize = mobile ? 9 : 11;
 const innerRadius = mobile ? 0.55 : 0.65; // 增大内径，给标签和中心文字更多空间，避免重叠
 const labelOffset = mobile ? '-45%' : '-50%'; // 调整offset，让标签位于环形中间位置，不靠近中心也不靠近边缘
-const statisticFontSize = mobile ? 16 : 20;
-const statisticTitleSize = mobile ? 10 : 11;
+const statisticFontSize = mobile ? 18 : 22; // 稍微增大字体，让数字更突出
+const statisticTitleSize = mobile ? 11 : 12; // 稍微增大标题字体
 
 const data = [
     { type: '线上商城', value: 3715 },
@@ -389,8 +392,9 @@ new G2Plot.Pie('chart-outer', {
             style: {
                 fontSize: statisticTitleSize,
                 color: '#86868B',
-                lineHeight: 1.2,
+                lineHeight: 1.4, // 增加行高，让标题与数字有更好的间距
                 whiteSpace: 'nowrap',
+                marginBottom: 4, // 添加下边距
             },
         },
         content: {
@@ -399,8 +403,9 @@ new G2Plot.Pie('chart-outer', {
                 fontSize: statisticFontSize,
                 fontWeight: 700,
                 color: '#1D1D1F',
-                lineHeight: 1.2,
+                lineHeight: 1.3, // 增加行高，让数字更舒适
                 whiteSpace: 'nowrap',
+                letterSpacing: -0.5, // 稍微收紧字母间距，让数字更紧凑
             },
         },
     },
