--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -120,7 +120,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body xl" style="position: relative; padding-right: 160px;">
+        <div class="chart-body xl" style="position: relative;">
             <!-- Y轴单位标签 - 左上角 -->
             <div class="axis-unit y-left">缺陷数</div>
             <!-- 右Y轴单位标签 - 右上角 -->
@@ -136,8 +136,8 @@
                     <span class="legend-text">累计占比</span>
                 </div>
             </div>
-            <!-- X轴字段标签 - 右下角，稍微左移避免与X轴标签重叠 -->
-            <div class="x-field-label" style="right: 20px; bottom: 8px;">缺陷类型</div>
+            <!-- X轴字段标签 - 右下角 -->
+            <div class="x-field-label">缺陷类型</div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
             <div class="hover-hint">悬停查看标注</div>
             <div class="annotation-layer">
@@ -295,7 +295,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [30, 35, 50, 35] : [40, 50, 60, 50]; // 双Y轴需要左右padding更大，底部增加空间避免X轴标签重叠
+const basePadding = mobile ? [30, 20, 50, 20] : [40, 20, 60, 20]; // 双Y轴需要左右padding，但横向图例不需要太多右侧空间，减少左右padding让图表居中
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
