统一所有26个图表的图例标记为圆形，并优化图例位置避免遮挡
修改内容：
1. CSS样式修改：
   - 将.legend-icon-square的border-radius从2px改为50%，统一为圆形
   - 横向图例增加max-width: 200px，避免遮挡
   - 横向图例位置调整：top: 8px, right: 8px，避免遮挡图表顶部和右侧

2. HTML文件修改（19个图表文件）：
   - 将所有legend-icon-square类名改为legend-icon-circle
   - 包括：柱状图、堆叠柱状图、条形图、折线图、面积图、饼图、直方图、散点图、气泡图、雷达图、漏斗图、帕累托图、矩形树图、词云图、热力图、环图、瀑布图、双轴图、玫瑰图、旭日图、桑基图

3. JavaScript配置修改（7个图表文件）：
   - 将所有G2Plot配置中的symbol: 'square'改为symbol: 'circle'
   - 包括：柱状图、堆叠柱状图、折线图、面积图、饼图、热力图

4. 图例位置优化：
   - z-index保持为1，确保不遮挡图表内容
   - 横向图例位置微调，避免遮挡图表数据区域

现在所有26个图表的图例标记统一为圆形，且不遮挡图表内容

--- a/01-column/index.html
+++ b/01-column/index.html
@@ -146,7 +146,7 @@
             <div class="x-field-label">按地区</div>
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <div class="legend-icon-square" style="background: #5B8FF9;"></div>
+                    <div class="legend-icon-circle" style="background: #5B8FF9;"></div>
                     <span class="legend-text">销售额</span>
                 </div>
             </div>
@@ -362,7 +362,7 @@
             style: { fontSize: 12, fill: '#1D1D1F' },
         },
         marker: {
-            symbol: 'square',
+            symbol: 'circle',
             style: { r: 5 },
         },
     },
@@ -482,7 +482,7 @@ new Column('chart-grouped', {
             style: { fontSize: mobile ? 9 : 12, fill: '#1D1D1F' },
         },
         marker: {
-            symbol: 'square',
+            symbol: 'circle',
             style: { r: 4 }, // 统一使用方形标记，统一尺寸
         },
     },
