--- a/04-line/index.html
+++ b/04-line/index.html
@@ -427,7 +427,7 @@ new Line('chart-multi', {
             style: { fontSize: legendFontSize, fill: '#1D1D1F' },
         },
         marker: {
-            symbol: 'square', // 统一使用方形标记
+            symbol: 'circle', // 统一使用圆形标记
             style: { r: 4 },
         },
     },
