--- a/06-pie/index.html
+++ b/06-pie/index.html
@@ -322,7 +322,7 @@ new Pie('chart-basic', {
     legend: { 
         position: 'right', 
         itemName: { style: { fontSize: mobile ? 9 : 11 } },
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
     interactions: [{ type: 'element-active' }],
 }).render();
@@ -338,7 +338,7 @@ new Pie('chart-donut', {
     legend: { 
         position: 'right', 
         itemName: { style: { fontSize: mobile ? 9 : 11 } },
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
     statistic: {
         title: { content: '总计', style: { fontSize: mobile ? 10 : 11 } },
@@ -356,7 +356,7 @@ new Rose('chart-rose', {
     legend: { 
         position: 'right', 
         itemName: { style: { fontSize: mobile ? 9 : 11 } },
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
 }).render();
 
