--- a/11-funnel/index.html
+++ b/11-funnel/index.html
@@ -123,23 +123,23 @@
         <div class="chart-body md">
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">访问</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">浏览</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF9845;"></span>
+                    <span class="legend-icon-circle" style="background: #FF9845;"></span>
                     <span class="legend-text">加购</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF9845;"></span>
+                    <span class="legend-icon-circle" style="background: #FF9845;"></span>
                     <span class="legend-text">下单</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #E86452;"></span>
+                    <span class="legend-icon-circle" style="background: #E86452;"></span>
                     <span class="legend-text">支付</span>
                 </div>
             </div>
