--- a/15-wordcloud/index.html
+++ b/15-wordcloud/index.html
@@ -134,23 +134,23 @@
             <!-- 显示主要颜色对应关系 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">高频词</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">中高频词</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF9500;"></span>
+                    <span class="legend-icon-circle" style="background: #FF9500;"></span>
                     <span class="legend-text">中频词</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF3B30;"></span>
+                    <span class="legend-icon-circle" style="background: #FF3B30;"></span>
                     <span class="legend-text">中低频词</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5856D6;"></span>
+                    <span class="legend-icon-circle" style="background: #5856D6;"></span>
                     <span class="legend-text">低频词</span>
                 </div>
             </div>
