--- a/16-heatmap/index.html
+++ b/16-heatmap/index.html
@@ -129,15 +129,15 @@
             <!-- 显示颜色强度对应关系 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #E8F3FF;"></span>
+                    <span class="legend-icon-circle" style="background: #E8F3FF;"></span>
                     <span class="legend-text">低访问量</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">中访问量</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #0051D4;"></span>
+                    <span class="legend-icon-circle" style="background: #0051D4;"></span>
                     <span class="legend-text">高访问量</span>
                 </div>
             </div>
@@ -175,7 +175,7 @@
     },
     legend: { 
         position: 'bottom',
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
 }).render();</pre>
         </div>
@@ -295,7 +295,7 @@ new Heatmap('chart-basic', {
     },
     legend: { 
         position: 'bottom',
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
 }).render();
 
