--- a/23-rose/index.html
+++ b/23-rose/index.html
@@ -129,23 +129,23 @@
         <div class="chart-body lg" style="position: relative;">
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">智能手机</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">平板电脑</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #F6BD16;"></span>
+                    <span class="legend-icon-circle" style="background: #F6BD16;"></span>
                     <span class="legend-text">笔记本</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #945FB9;"></span>
+                    <span class="legend-icon-circle" style="background: #945FB9;"></span>
                     <span class="legend-text">配件</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #E86452;"></span>
+                    <span class="legend-icon-circle" style="background: #E86452;"></span>
                     <span class="legend-text">服务</span>
                 </div>
             </div>
