--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -127,19 +127,19 @@
             <!-- 显示主要节点类型的颜色对应关系 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">流量来源</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">着陆页</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #F6BD16;"></span>
+                    <span class="legend-icon-circle" style="background: #F6BD16;"></span>
                     <span class="legend-text">用户行为</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #945FB9;"></span>
+                    <span class="legend-icon-circle" style="background: #945FB9;"></span>
                     <span class="legend-text">转化结果</span>
                 </div>
             </div>
