--- a/02-stacked-column/index.html
+++ b/02-stacked-column/index.html
@@ -129,11 +129,11 @@
             <div class="x-field-label">按月份</div>
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <div class="legend-icon-square" style="background: #5B8FF9;"></div>
+                    <div class="legend-icon-circle" style="background: #5B8FF9;"></div>
                     <span class="legend-text">线上</span>
                 </div>
                 <div class="legend-item">
-                    <div class="legend-icon-square" style="background: #5AD8A6;"></div>
+                    <div class="legend-icon-circle" style="background: #5AD8A6;"></div>
                     <span class="legend-text">线下</span>
                 </div>
             </div>
@@ -411,7 +411,7 @@ new Column('chart-percent', {
     legend: { 
         position: 'top-right', 
         itemName: { style: { fontSize: legendFontSize } },
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
 }).render();
 
@@ -448,7 +448,7 @@ new Column('chart-multi', {
     legend: { 
         position: 'top-right', 
         itemName: { style: { fontSize: legendFontSize } },
-        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+        marker: { symbol: 'circle', style: { r: 4 } } // 统一使用圆形标记
     },
 }).render();
 
