--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -130,7 +130,7 @@
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">销量</span>
                 </div>
             </div>
