--- a/07-histogram/index.html
+++ b/07-histogram/index.html
@@ -127,7 +127,7 @@
             <!-- 自定义图例 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">用户数</span>
                 </div>
             </div>
