--- a/09-bubble/index.html
+++ b/09-bubble/index.html
@@ -127,15 +127,15 @@
             <!-- 自定义图例 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">电子</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">家电</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF9500;"></span>
+                    <span class="legend-icon-circle" style="background: #FF9500;"></span>
                     <span class="legend-text">日用</span>
                 </div>
             </div>
