--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -128,7 +128,7 @@
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">缺陷数</span>
                 </div>
                 <div class="legend-item">
