--- a/14-treemap/index.html
+++ b/14-treemap/index.html
@@ -125,23 +125,23 @@
             <!-- 颜色顺序：研发部(蓝)、市场部(绿)、销售部(橙)、行政部(红)、财务部(紫) -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">研发部</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">市场部</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF9845;"></span>
+                    <span class="legend-icon-circle" style="background: #FF9845;"></span>
                     <span class="legend-text">销售部</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #FF3B30;"></span>
+                    <span class="legend-icon-circle" style="background: #FF3B30;"></span>
                     <span class="legend-text">行政部</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5856D6;"></span>
+                    <span class="legend-icon-circle" style="background: #5856D6;"></span>
                     <span class="legend-text">财务部</span>
                 </div>
             </div>
