--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -176,19 +176,19 @@
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">线上商城</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
                     <span class="legend-text">线下门店</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #F6BD16;"></span>
+                    <span class="legend-icon-circle" style="background: #F6BD16;"></span>
                     <span class="legend-text">经销商</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #945FB9;"></span>
+                    <span class="legend-icon-circle" style="background: #945FB9;"></span>
                     <span class="legend-text">企业客户</span>
                 </div>
             </div>
