--- a/21-waterfall/index.html
+++ b/21-waterfall/index.html
@@ -126,15 +126,15 @@
             <div class="axis-unit y-left">万元</div>
             <div class="custom-legend horizontal">
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
                     <span class="legend-text">增加</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #E86452;"></span>
+                    <span class="legend-icon-circle" style="background: #E86452;"></span>
                     <span class="legend-text">减少</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-square" style="background: #86868B;"></span>
+                    <span class="legend-icon-circle" style="background: #86868B;"></span>
                     <span class="legend-text">合计</span>
                 </div>
             </div>
