修复帕累托图例重合和百分号位置问题
修复内容：
1. 图例重合问题：
   - 移除图例中的'缺陷数'项，因为左上角已有Y轴单位标签'缺陷数'
   - 将图例中的'缺陷数'改为'柱状图'，避免与Y轴单位标签重复
   - 图例现在只显示数据系列名称（柱状图、累计占比），不显示单位

2. 百分号位置问题：
   - 移除Y轴标签formatter中的'%'符号
   - 只保留右上角的单位标签'%'，避免重复
   - 调整右Y轴单位标签位置：right从28px调整为12px，更靠近Y轴

3. 设计规范：
   - Y轴单位标签在左上角/右上角显示单位（缺陷数、%）
   - 图例只显示数据系列名称，不显示单位
   - Y轴标签的数字后面不显示单位符号（因为单位已在顶部显示）

现在图例不再重合，百分号位置正确，符合设计规范

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -126,10 +126,11 @@
             <!-- 右Y轴单位标签 - 右上角 -->
             <div class="axis-unit y-right">%</div>
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
+            <!-- 注意：Y轴单位标签已显示"缺陷数"和"%"，图例只显示数据系列名称 -->
             <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
-                    <span class="legend-text">缺陷数</span>
+                    <span class="legend-text">柱状图</span>
                 </div>
                 <div class="legend-item">
                     <span class="legend-icon-line-dot" style="background: #5AD8A6;"></span>
@@ -341,7 +342,7 @@ new DualAxes('chart-basic', {
             title: null, // 移除title，使用自定义axis-unit标签
             label: { 
                 style: { fontSize: fontSize },
-                formatter: (v) => (v * 100).toFixed(0) + '%',
+                formatter: (v) => (v * 100).toFixed(0), // 移除'%'，因为右上角已有单位标签"%"
             },
         },
     },
