修复热力图图例遮挡问题：移除自定义图例，使用G2Plot底部图例
修复内容：
1. 移除自定义图例（custom-legend）：
   - 移除右上角的横向图例，避免遮挡图表数据区域
   - 图例现在只使用G2Plot自带的底部图例

2. 调整chart-body padding：
   - 添加padding-right: 20px，为图表留出空间

3. 优化G2Plot图例配置：
   - 保持position: 'bottom'，图例在底部显示
   - 添加itemName formatter，确保图例文字正确显示
   - 统一使用圆形标记

现在热力图的图例在底部显示，不再遮挡图表数据区域

--- a/16-heatmap/index.html
+++ b/16-heatmap/index.html
@@ -121,26 +121,9 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body md" style="position: relative;">
+        <div class="chart-body md" style="position: relative; padding-right: 20px;">
             <!-- 轴单位标签 -->
             <div class="axis-unit y-left">日期</div>
-            
-            <!-- 图例统一在右侧对齐，不遮挡图表 -->
-            <!-- 显示颜色强度对应关系 -->
-            <div class="custom-legend horizontal">
-                <div class="legend-item">
-                    <span class="legend-icon-circle" style="background: #E8F3FF;"></span>
-                    <span class="legend-text">低访问量</span>
-                </div>
-                <div class="legend-item">
-                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
-                    <span class="legend-text">中访问量</span>
-                </div>
-                <div class="legend-item">
-                    <span class="legend-icon-circle" style="background: #0051D4;"></span>
-                    <span class="legend-text">高访问量</span>
-                </div>
-            </div>
             
             <!-- X轴字段标签 -->
             <div class="x-field-label">小时</div>
