进一步优化帕累托图：大幅减少留白，让图表更大
优化内容：
1. 进一步减少图表padding：
   - PC端：从[30,15,50,15]调整为[25,10,45,10]
   - 移动端：从[25,15,45,15]调整为[20,10,40,10]
   - 大幅减少左右和上下padding，让图表占满空间

2. 增大柱体宽度：
   - PC端：columnWidthRatio从0.5调整为0.55
   - 移动端：从0.55调整为0.6
   - 让柱体更宽，图表更饱满

3. 添加autoFit：
   - 启用autoFit: true，让图表自动适应容器大小

4. 效果：
   - 图表更大，留白大幅减少
   - 柱体更宽，视觉效果更好
   - 图表充分利用可用空间

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -296,7 +296,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [25, 15, 45, 15] : [30, 15, 50, 15]; // 减少padding，让图表更大，减少留白
+const basePadding = mobile ? [20, 10, 40, 10] : [25, 10, 45, 10]; // 进一步减少padding，让图表更大，消除留白
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
@@ -320,11 +320,12 @@ new DualAxes('chart-basic', {
     yField: ['value', 'percent'],
     padding: basePadding,
     appendPadding: [0, 0, 0, 0], // 不添加额外padding，让图表占满空间
+    autoFit: true, // 自动适应容器大小
     geometryOptions: [
         {
             geometry: 'column',
             color: '#5B8FF9',
-            columnWidthRatio: mobile ? 0.55 : 0.5,
+            columnWidthRatio: mobile ? 0.6 : 0.55, // 增大柱体宽度，让图表更饱满
             columnStyle: { radius: [borderRadius, borderRadius, 0, 0] },
         },
         {
