进一步减少帕累托图留白：减少chart-body的padding
优化内容：
- chart-body的padding从默认16px减少到8px
- 让图表容器更紧凑，图表内容占用更多空间
- 结合之前减少的图表padding，现在留白大幅减少

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -120,7 +120,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body xl" style="position: relative;">
+        <div class="chart-body xl" style="position: relative; padding: 8px;">
             <!-- Y轴单位标签 - 左上角 -->
             <div class="axis-unit y-left">缺陷数</div>
             <!-- 右Y轴单位标签 - 右上角 -->
