修复所有图表遮挡问题：隐藏悬停提示，优化图例位置
修复内容：
1. 隐藏悬停提示（hover-hint）：
   - 添加display: none !important，完全隐藏所有'悬停查看标注'提示
   - 避免遮挡图表数据区域

2. 优化横向图例位置：
   - top从8px调整为4px，进一步上移
   - right从8px调整为4px，进一步右移
   - z-index从1调整为0，确保不遮挡图表
   - 添加pointer-events: none，禁用交互避免遮挡

3. 优化漏斗图padding：
   - PC端：从[24,80,24,24]调整为[16,50,16,16]
   - 移动端：从[12,40,12,12]调整为[8,30,8,8]
   - 减少留白，让图表更大

现在所有图表不再有遮挡问题，图例和提示都不遮挡图表内容

--- a/11-funnel/index.html
+++ b/11-funnel/index.html
@@ -339,7 +339,7 @@ const { Funnel } = G2Plot;
 const mobile = ChartSpec.isMobile();
 const labelFontSize = mobile ? 11 : 11;
 const conversionFontSize = mobile ? 11 : 12;
-const padding = mobile ? [12, 40, 12, 12] : [24, 80, 24, 24];
+const padding = mobile ? [8, 30, 8, 8] : [16, 50, 16, 16]; // 减少padding，让图表更大，减少留白
 
 const data = [
     { stage: '访问', value: 10000 },
