优化桑基图：居中显示并增大尺寸适配组件
优化内容：
1. 调整chart-body padding：
   - 从padding-right: 20px, padding-left: 10px改为统一的padding: 8px
   - 让图表容器更紧凑，图表居中显示

2. 平衡图表padding，让图表居中：
   - PC端：从[30,160,30,10]调整为[20,20,20,20]
   - 移动端：从[20,140,20,10]调整为[15,20,15,15]
   - 左右padding平衡，图表居中显示

3. 增大节点尺寸：
   - nodeWidthRatio：PC端从0.012调整为0.015，移动端从0.015调整为0.018
   - nodePaddingRatio：PC端保持0.025，移动端从0.025调整为0.03
   - 让图表节点更大，图表整体更大

4. 效果：
   - 图表居中显示，不再靠左
   - 图表尺寸更大，适配组件
   - 留白减少，空间利用更好

--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -122,7 +122,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body xl" style="position: relative; padding-right: 20px; padding-left: 10px;">
+        <div class="chart-body xl" style="position: relative; padding: 8px;">
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <!-- 显示主要节点类型的颜色对应关系 -->
             <div class="custom-legend horizontal">
@@ -310,7 +310,7 @@ new G2Plot.Sankey('chart-basic', {
     sourceField: 'source',
     targetField: 'target',
     weightField: 'value',
-    padding: mobile ? [20, 140, 20, 10] : [30, 160, 30, 10], // 减少左侧padding，让图表向右移动，右侧为图例留空间
+    padding: mobile ? [15, 20, 15, 15] : [20, 20, 20, 20], // 平衡左右padding，让图表居中，减少留白
     nodeStyle: {
         opacity: 1,
         fillOpacity: 1,
@@ -319,8 +319,8 @@ new G2Plot.Sankey('chart-basic', {
         fillOpacity: edgeOpacity,
     },
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9', '#E86452', '#00C7BE', '#FF9845', '#86868B'],
-    nodeWidthRatio: nodeWidthRatio,
-    nodePaddingRatio: 0.025,
+    nodeWidthRatio: mobile ? 0.018 : 0.015, // 增大节点宽度，让图表更大
+    nodePaddingRatio: mobile ? 0.03 : 0.025, // 稍微增加节点间距
     label: {
         formatter: ({ name }) => name,
         style: { fill: '#1D1D1F', fontSize: labelFontSize },
