进一步增大桑基图节点尺寸
- nodeWidthRatio：PC端从0.015调整为0.018，移动端从0.018调整为0.02
- 让图表节点更大，图表整体更大更饱满

--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -319,7 +319,7 @@ new G2Plot.Sankey('chart-basic', {
         fillOpacity: edgeOpacity,
     },
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9', '#E86452', '#00C7BE', '#FF9845', '#86868B'],
-    nodeWidthRatio: mobile ? 0.018 : 0.015, // 增大节点宽度，让图表更大
+    nodeWidthRatio: mobile ? 0.02 : 0.018, // 增大节点宽度，让图表更大更饱满
     nodePaddingRatio: mobile ? 0.03 : 0.025, // 稍微增加节点间距
     label: {
         formatter: ({ name }) => name,
